added jks files for TLS connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=spring-tls-https
+
+server.port=8090
+server.servlet.context-path=/tls
+
+server.ssl.enabled=true
+server.ssl.key-alias=sadu
+server.ssl.key-store=classpath:sadu.jks
+server.ssl.key-store-password=password
+server.ssl.key-store-type=JKS
+
+
